# simple_langgraph_chatbot

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  langgraph.json  manage.py  pyproject.toml  readme.md  server.Dockerfile
chatui/: urls.py  views.py
chatui/static/chatui/css/: chatui.css
chatui/static/chatui/js/: chatui.js
chatui/templates/chatui/: chat.html
langgraphweb/: asgi.py  settings.py  urls.py  wsgi.py
langgraphweb/utils/: pydantics.py  queries.py
src/: graph.py  prompts.py  state.py
src/agent/: config.py  graph.py  prompts.py  state.py  tool_node.py
src/agent/deep_research/: graph.py  plan_tool.py  prompts.py  pydantics.py  state.py
src/agent/tools/: __init__.py  bbc_news.py  hf_papers.py  stock_fundamentals.py  stock_news.py  tool_node.py  web_search.py
src/frontend/: queries.py  settings.py
src/streamlit/: queries.py  settings.py
src/tools/: __init__.py  bbc_news.py  constants.py  fetch_hf_paper.py  hf_papers.py  stock_fundamentals.py  stock_news.py  tool_node.py  utils.py
src/utils/: queries.py
